Revert "Alterações no principal"
This reverts commit 269345caeff77ec59db9495852b8e0efa6c1c68e.

--- a/1° Lição/index.html
+++ b/1° Lição/index.html
@@ -15,6 +15,6 @@
 	    <b>Total:</b> {{quantidade * custos | currency}}
 	  </div>
 	</div>
-	<script src="../bower_components/bower-angularjs/angular.js"></script>
+	<script src=".bower_components/bower-angularjs/angular.js"></script>
 </body>
 </html>
